[package]
name = "perplexions"
version = "0.1.0"
edition = "2021"
default-run = "perplexions"

[[bin]]
name = "perplexions"
path = "src/main.rs"

[[bin]]
name = "solver"
path = "src/solver.rs"

[features]
experimental-levels = [] # feature has no explicit dependencies

[dependencies]
sfml = "0.24.0"
